implement the jwt sign up

--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "author": "poly4",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
   }
