--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,9 @@
     "react": "^17.0.2",
     "react-cssfx-loading": "^1.0.3",
     "react-dom": "^17.0.2",
-    "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-image-file-resizer": "^0.4.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
