--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.4.2",
+    "@mui/x-date-pickers": "^5.0.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -30,7 +31,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
